chan_sip:  remove unnecessary ast_channel_unlock(peer) as RAII looks after it

Otherwise console output

        (get_refer_info): mutex 'peer' freed more times than we've locked!
        (get_refer_info): Error releasing mutex: Operation not permitted

    or
        (get_refer_info): attempted unlock mutex 'peer' without owning it!
        (__ast_read): 'peer' was locked here.
        ...dump_backtrace

        (get_refer_info): Error releasing mutex: Operation not permitted
        (__ast_read): mutex 'chan' freed more times than we've locked!

ASTERISK-28011 #close

Change-Id: I6e45f2764ba4f3273a943300f91ac9b461ac2893